--- a/chat.html
+++ b/chat.html
@@ -1,30 +1,20 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>DFOD Support</title>
-  <link rel="stylesheet" href="style.css">
-  <script type="module" src="chat.js" defer></script>
-</head>
-<body>
-
 <div id="top-banner">SECRET</div>
 
-<div class="chat-box">
-  <img src="logo-chat.png" class="logo" alt="Chat Logo">
-  <h2 class="title">DFOD Support</h2>
+<div class="chat-box" id="chat" style="display:none">
+  
+<!-- Mission Portal Button -->
+<button id="mission-btn"> Assignments</button>
+
+  <img src="ministry-coat-of-arms-cropped.png" class="logo" alt="Chat Logo">
+  <h2 class="title">DFOD CHAT</h2>
 
   <div id="log"></div>
 
   <div class="input-row">
-    <textarea id="msg" placeholder="Type your message"></textarea>
+    <textarea id="msg" placeholder="Type a message"></textarea>
     <button id="send-btn">Send</button>
   </div>
 
-  <button id="mission-btn">Assignments</button>
+  <!-- Unterer Banner -->
+  <div id="bottom-banner">SECRET</div>
 </div>
-
-<div id="bottom-banner">SECRET</div>
-
-</body>
-</html>
