--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="utf-8">
-  <title>DFOD Portal</title>
+  <title>DFOD PORTAL LOGIN</title>
   <link rel="stylesheet" href="style.css">
-  <script type="module" src="auth.js" defer></script>
 </head>
 <body>
 
-<div class="login-box">
-  <img src="logo-login.png" class="logo" alt="Login Logo">
-  <h2 class="title">DFOD Portal</h2>
+<!-- LOGIN -->
+<div class="login-box" id="login">
+  <img src="ministry-coat-of-arms-cropped.png" class="logo" alt="Login Logo">
+  <h2 class="title">DFD PORTAL LOGIN</h2>
 
   <div class="login-row">
     <label for="user" class="login-label">Username:</label>
-    <input id="user" type="email" placeholder="">
+    <input id="user" placeholder="">
   </div>
 
   <div class="login-row">
@@ -25,6 +25,8 @@
   <button id="login-btn">Login</button>
   <div id="err"></div>
 </div>
+
+<script type="module" src="auth.js"></script>
 
 </body>
 </html>
