--- a/mission.html
+++ b/mission.html
@@ -14,10 +14,16 @@
   <!-- Logo -->
   <img src="ministry-coat-of-arms-cropped.png" class="logo" alt="Portal Logo">
 
-  <!-- Dynamischer Missions-Titel -->
+  <!-- Missionsauswahl -->
+  <label for="mission-select">Select Mission:</label>
+  <select id="mission-select">
+    <option value="">Loading missions...</option>
+  </select>
+
+  <!-- Missions-Titel -->
   <h2 id="mission-title"></h2>
 
-  <!-- Dynamische Missionsbeschreibung -->
+  <!-- Missionsbeschreibung -->
   <p id="mission-desc"></p>
 
   <!-- Buttons -->
