--- a/mission.html
+++ b/mission.html
@@ -8,32 +8,15 @@
 <body>
 
 <div class="mission-box">
-  <!-- Oberer Banner -->
   <div id="top-banner">SECRET</div>
-
-  <!-- Logo -->
   <img src="ministry-coat-of-arms-cropped.png" class="logo" alt="Portal Logo">
 
-  <!-- Missionsauswahl -->
-  <label for="mission-select">Select Mission:</label>
-  <select id="mission-select">
-    <option value="">Loading missions...</option>
-  </select>
+  <!-- Container für alle Missionen -->
+  <div id="missions-container"></div>
 
-  <!-- Missions-Titel -->
-  <h2 id="mission-title"></h2>
+<!-- Chat-Button -->
+<button id="chat-btn">DFOD Chat</button>
 
-  <!-- Missionsbeschreibung -->
-  <p id="mission-desc"></p>
-
-  <!-- Buttons -->
-  <button id="accept-btn">Accept</button>
-  <button id="reject-btn">Reject</button>
-
-  <!-- Live Status -->
-  <p id="mission-status"></p>
-
-  <!-- Unterer Banner -->
   <div id="bottom-banner">SECRET</div>
 </div>
 
