--- a/chat.html
+++ b/chat.html
@@ -33,6 +33,9 @@
   <!-- Mission Portal Button -->
   <button id="mission-btn">Assignments</button>
 
+  <!-- Logout Button -->
+  <button id="logout-btn" style="margin-left:10px;">Logout</button>
+
   <img src="ministry-coat-of-arms-cropped.png" class="logo" alt="Chat Logo">
   <h2 class="title">DFOD CHAT</h2>
 
