--- a/chat.html
+++ b/chat.html
@@ -7,15 +7,18 @@
 </head>
 <body>
 
+<div id="top-banner">SECRET</div>
+
+<!-- LOGOUT RECHTS UNTER DEM BANNER -->
+<div class="top-actions">
+  <button id="logout-btn">Logout</button>
+</div>
+
 <!-- CHAT -->
 <div class="chat-box" id="chat" style="display:none">
-  <div id="top-banner">SECRET</div>
 
   <!-- Mission Portal Button -->
   <button id="mission-btn">Assignments</button>
-
-  <!-- Logout Button -->
-  <button id="logout-btn" style="margin-left:10px;">Logout</button>
 
   <img src="ministry-coat-of-arms-cropped.png" class="logo" alt="Chat Logo">
   <h2 class="title">DFOD CHAT</h2>
@@ -25,6 +28,12 @@
   <div class="input-row">
     <textarea id="msg" placeholder="Type a message"></textarea>
     <button id="send-btn">Send</button>
+
+  <div class="mission-row">
+    <button id="mission-btn" class="mission-btn">Assignments</button>
+
+  </div>
+
   </div>
 
   <div id="bottom-banner">SECRET</div>
