--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- LOGIN -->
 <div class="login-box" id="login">
   <img src="ministry-coat-of-arms-cropped.png" class="logo" alt="Login Logo">
-  <h2 class="title">DFD PORTAL LOGIN</h2>
+  <h2 class="title">DFOD PORTAL LOGIN</h2>
 
   <div class="login-row">
     <label for="user" class="login-label">Username:</label>
