--- a/assignments.html
+++ b/assignments.html
@@ -13,6 +13,10 @@
   <button id="logout-btn">Logout</button>
 </div>
 
+<div class="top-actions">
+  <button id="logout-btn">Logout</button>
+</div>
+
 <div class="mission-box">
   <img src="ministry-coat-of-arms-cropped.png" class="logo" alt="Portal Logo">
 
