--- a/assignments.html
+++ b/assignments.html
@@ -17,29 +17,9 @@
 
   <img src="ministry-coat-of-arms-cropped.png" class="logo" alt="Portal Logo">
 
-  <!-- Einzelne Missionen (statisch für Layout) -->
-  <div class="single-mission" data-mission-id="mission1">
-    <h3>Mission 1</h3>
-    <p>Beschreibung der Mission 1</p>
-    <p class="status">Status: PENDING</p>
-    <div class="buttons-row">
-      <button class="accept-btn">Accept</button>
-      <button class="reject-btn">Reject</button>
-      <button class="upload-btn" disabled>Upload</button>
-      <input type="file" accept=".txt,.pdf" style="display:none">
-    </div>
-  </div>
-
-  <div class="single-mission" data-mission-id="mission2">
-    <h3>Mission 2</h3>
-    <p>Beschreibung der Mission 2</p>
-    <p class="status">Status: PENDING</p>
-    <div class="buttons-row">
-      <button class="accept-btn">Accept</button>
-      <button class="reject-btn">Reject</button>
-      <button class="upload-btn" disabled>Upload</button>
-      <input type="file" accept=".txt,.pdf" style="display:none">
-    </div>
+  <!-- Container für alle Missionen -->
+  <div id="missions-container">
+    <!-- JS erzeugt hier die Missionsblöcke -->
   </div>
 
   <!-- Chat-Button unten -->
@@ -51,103 +31,6 @@
 
 <div id="bottom-banner">SECRET</div>
 
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
-import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-import { getStorage, ref as storageRef, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js";
-
-/* Firebase Config */
-const firebaseConfig = {
-  apiKey: "AIzaSyA4rFUf7-avxLsSuarrh1fZn8Pd91Q2oic",
-  authDomain: "fmd-dfod-portal-ca1da.firebaseapp.com",
-  projectId: "fmd-dfod-portal-ca1da",
-};
-
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
-const auth = getAuth(app);
-const storage = getStorage(app);
-
-let currentUser = null;
-
-/* Auth Check */
-onAuthStateChanged(auth, user => {
-  if (!user) {
-    window.location.href = "index.html";
-  } else {
-    currentUser = user;
-  }
-});
-
-/* Logout */
-document.getElementById("logout-btn").addEventListener("click", async () => {
-  await signOut(auth);
-  window.location.href = "index.html";
-});
-
-/* Chat */
-document.getElementById("chat-btn").addEventListener("click", () => {
-  window.location.href = "chat.html";
-});
-
-/* Buttons */
-document.querySelectorAll('.single-mission').forEach(missionEl => {
-  const acceptBtn = missionEl.querySelector('.accept-btn');
-  const rejectBtn = missionEl.querySelector('.reject-btn');
-  const uploadBtn = missionEl.querySelector('.upload-btn');
-  const fileInput = missionEl.querySelector('input[type="file"]');
-  const statusP = missionEl.querySelector('.status');
-  const missionId = missionEl.dataset.missionId;
-
-  acceptBtn.addEventListener('click', async () => {
-    statusP.textContent = 'Status: ACCEPTED';
-    acceptBtn.disabled = true;
-    rejectBtn.disabled = true;
-    uploadBtn.disabled = false;
-
-    if (currentUser) {
-      const ref = doc(db, "missions", missionId, "responses", currentUser.uid);
-      await setDoc(ref, {
-        status: "accepted",
-        user: currentUser.email,
-        timestamp: Date.now()
-      });
-    }
-  });
-
-  rejectBtn.addEventListener('click', async () => {
-    statusP.textContent = 'Status: REJECTED';
-    acceptBtn.disabled = true;
-    rejectBtn.disabled = true;
-    uploadBtn.disabled = true;
-
-    if (currentUser) {
-      const ref = doc(db, "missions", missionId, "responses", currentUser.uid);
-      await setDoc(ref, {
-        status: "rejected",
-        user: currentUser.email,
-        timestamp: Date.now()
-      });
-    }
-  });
-
-  uploadBtn.addEventListener('click', () => fileInput.click());
-
-  fileInput.addEventListener('change', async (e) => {
-    if (!e.target.files.length) return;
-    const file = e.target.files[0];
-    const fileRef = storageRef(storage, `mission_uploads/${missionId}/${currentUser.uid}/${file.name}`);
-    await uploadBytes(fileRef, file);
-    const url = await getDownloadURL(fileRef);
-
-    const ref = doc(db, "missions", missionId, "responses", currentUser.uid);
-    await setDoc(ref, { fileUrl: url }, { merge: true });
-
-    alert(`File uploaded: ${file.name}`);
-  });
-});
-</script>
-
+<script type="module" src="mission.js"></script>
 </body>
 </html>
