--- a/assignments.html
+++ b/assignments.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="utf-8">
-  <title>Assignments</title>
+  <meta charset="UTF-8">
+  <title>ASSIGNMENTS</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,12 +11,26 @@
 
 <div class="top-actions">
   <button id="logout-btn">Logout</button>
-  <button id="chat-btn">Chat</button>
 </div>
 
-<h2>Assignments</h2>
-<div id="assignments-list"></div>
+<div class="mission-box">
 
-<script type="module" src="assignments.js"></script>
+  <img src="ministry-coat-of-arms-cropped.png" class="logo" alt="Portal Logo">
+
+  <!-- Container für alle Missionen -->
+  <div id="missions-container">
+    <!-- JS erzeugt hier die Missionsblöcke -->
+  </div>
+
+  <!-- Chat-Button unten -->
+  <div class="mission-row">
+    <button id="chat-btn" class="mission-btn">DFOD Chat</button>
+  </div>
+
+</div>
+
+<div id="bottom-banner">SECRET</div>
+
+<script type="module" src="mission.js"></script>
 </body>
 </html>
