--- a/assignments.html
+++ b/assignments.html
@@ -1,40 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <title>ASSIGNMENTS</title>
+  <meta charset="utf-8">
+  <title>Assignments</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- Top Secret Banner -->
 <div id="top-banner">SECRET</div>
 
-<!-- Top actions -->
 <div class="top-actions">
   <button id="logout-btn">Logout</button>
   <button id="chat-btn">Chat</button>
 </div>
 
-<!-- Main mission container -->
-<div class="mission-box">
+<h2>Assignments</h2>
+<div id="assignments-list"></div>
 
-  <img
-    src="ministry-coat-of-arms-cropped.png"
-    class="logo"
-    alt="Portal Logo"
-  >
-
-  <!-- REQUIRED: assignments.js expects this ID -->
-  <div id="assignments-list"></div>
-
-</div>
-
-<!-- Bottom Secret Banner -->
-<div id="bottom-banner">SECRET</div>
-
-<!-- Correct script for assignments -->
 <script type="module" src="assignments.js"></script>
-
 </body>
 </html>
