--- a/assignments.html
+++ b/assignments.html
@@ -8,15 +8,21 @@
 <body>
 
 <div id="top-banner">SECRET</div>
-
+ 
 <div class="top-actions">
   <button id="logout-btn">Logout</button>
   <button id="chat-btn">Chat</button>
 </div>
 
+<div class="mission-box">
+
+  <img src="ministry-coat-of-arms-cropped.png" class="logo" alt="Portal Logo">
+  
 <h2>Assignments</h2>
 <div id="assignments-list"></div>
 
+</div>
+  
 <script type="module" src="assignments.js"></script>
 </body>
 </html>
