--- a/assignments.html
+++ b/assignments.html
@@ -11,7 +11,6 @@
  
 <div class="top-actions">
   <button id="logout-btn">Logout</button>
-  <button id="chat-btn">Chat</button>
 </div>
 
 <div class="mission-box">
@@ -20,6 +19,9 @@
   
 <h2>Assignments</h2>
 <div id="assignments-list"></div>
+
+    <div class="mission-row">
+    <button id="mission-btn" class="mission-btn">Assignments</button>
 
 </div>
   
