--- a/assignments.html
+++ b/assignments.html
@@ -21,7 +21,7 @@
 <div id="assignments-list"></div>
 
     <div class="mission-row">
-    <button id="mission-btn" class="mission-btn">Assignments</button>
+    <button id="chat-btn">Chat</button>
 
 </div>
   
