--- a/assignments.html
+++ b/assignments.html
@@ -13,7 +13,7 @@
   <button id="logout-btn">Logout</button>
 </div>
 
-<div class="mission-box">
+<div class="chat-box">
 
   <img src="ministry-coat-of-arms-cropped.png" class="logo" alt="Portal Logo">
   
