--- a/chat.html
+++ b/chat.html
@@ -9,12 +9,10 @@
 
 <div id="top-banner">SECRET</div>
 
-<!-- LOGOUT RECHTS UNTER DEM BANNER -->
 <div class="top-actions">
   <button id="logout-btn">Logout</button>
 </div>
 
-<!-- CHAT -->
 <div class="chat-box" id="chat" style="display:none">
 
   <img src="ministry-coat-of-arms-cropped.png" class="logo" alt="Chat Logo">
@@ -25,14 +23,15 @@
   <div class="input-row">
     <textarea id="msg" placeholder="Type a message"></textarea>
     <button id="send-btn">Send</button>
-
   </div>
 
   <div class="mission-row">
     <button id="mission-btn" class="mission-btn">Assignments</button>
+  </div>
 
-  <div id="bottom-banner">SECRET</div>
 </div>
+
+<div id="bottom-banner">SECRET</div>
 
 <script type="module" src="chat.js"></script>
 </body>
