--- a/chat.html
+++ b/chat.html
@@ -16,7 +16,7 @@
 <div class="chat-box" id="chat" style="display:none">
 
   <img src="ministry-coat-of-arms-cropped.png" class="logo" alt="Chat Logo">
-  <h2 class="title">DFOD CHAT</h2>
+  <h2 class="title">DFOD SUPPORT</h2>
 
   <div id="log"></div>
 
