--- a/assignments.html
+++ b/assignments.html
@@ -24,6 +24,8 @@
     <button id="chat-btn">Chat</button>
 
 </div>
+
+<div id="bottom-banner">SECRET</div>
   
 <script type="module" src="assignments.js"></script>
 </body>
